# Renting-Service

./: package-lock.json
backend/PerformanceTests/: PerformanceTests.csproj  UnitTest1.cs
backend/RentingServiceBackend/: MappingProfiles.cs  Program.cs  RentApiSeeder.cs  RentingServiceBackend.csproj  RentingServiceBackend.http  RentingServiceBackend.sln  WeatherForecast.cs  appsettings.json  nlog.config
backend/RentingServiceBackend/Authorization/: ResourceOperationRequirement.cs  ResourceOperationRequirementHandler.cs
backend/RentingServiceBackend/Controllers/: AuthenticationController.cs  CommentController.cs  FeatureController.cs  MainCategoryController.cs  PostController.cs  ReservationController.cs  UserController.cs  WeatherForecastController.cs
backend/RentingServiceBackend/Entities/: AppDbContext.cs  Category.cs  Comment.cs  Feature.cs  ForRentMainCategory.cs  ForRentPost.cs  ForSaleMainCategory.cs  ForSalePost.cs  MainCategory.cs  Post.cs  PostCategoryLinkEnitity.cs  PostFeatureLinkEntity.cs  PostUserFollowLinkEntity.cs  Reservation.cs  Role.cs  User.cs
backend/RentingServiceBackend/Exceptions/: BadRequestException.cs  ConflictException.cs  ForbidException.cs  (+3 more)
backend/fotki/: 5.jfif  6.jfif  7.jfif  8  9.jfif  images (1).jfif  images.jfif
frontend/renting-Service-Frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend2/RentingServiceFrontend/: README.md  angular.json  package-lock.json  package.json
imageService/imageUploadService/: Cargo.toml
imageService/imageUploadService/src/: appsettings.json  main.rs
(+280 files in other folders)
