[package]
name = "imageUploadService"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = { version = "0.4.34", features = ["serde", "clock"] }
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
serde = { version = "1.0.196", features = ["derive"] }
